cmake_minimum_required(VERSION 3.6)
project(056_MergeIntervals.cpp)

set(CMAKE_CXX_STANDARD 11)

set(BUILD_010 main010)
set(SOURCE_FILES_010 010_RegularExpressionMatching.cpp)
add_executable(${BUILD_010} ${SOURCE_FILES_010})

set(BUILD_011 main011)
set(SOURCE_FILES_011 011_ContainerWithMostWater.cpp)
add_executable(${BUILD_011} ${SOURCE_FILES_011})


set(BUILD_013 main013)
set(SOURCE_FILES_013 013_RomanToInteger.cpp)
add_executable(${BUILD_013} ${SOURCE_FILES_013})


set(BUILD_014 main014)
set(SOURCE_FILES_014 014_LongestCommonPrefix.cpp)
add_executable(${BUILD_014} ${SOURCE_FILES_014})


set(BUILD_015 main015)
set(SOURCE_FILES_015 015_3Sum.cpp)
add_executable(${BUILD_015} ${SOURCE_FILES_015})


set(BUILD_031 main031)
set(SOURCE_FILES_031 031_NextPermutation.cpp)
add_executable(${BUILD_031} ${SOURCE_FILES_031})


set(BUILD_032 main032)
set(SOURCE_FILES_032 032_LongestValidParentheses.cpp)
add_executable(${BUILD_032} ${SOURCE_FILES_032})


set(BUILD_033 main033)
set(SOURCE_FILES_033 033_SearchInRotatedSortedArray.cpp)
add_executable(${BUILD_033} ${SOURCE_FILES_033})


set(BUILD_034 main034)
set(SOURCE_FILES_034 034_SearchForARange.cpp)
add_executable(${BUILD_034} ${SOURCE_FILES_034})


set(BUILD_035 main035)
set(SOURCE_FILES_035 035_SearchInsertPosition.cpp)
add_executable(${BUILD_035} ${SOURCE_FILES_035})


set(BUILD_036 main036)
set(SOURCE_FILES_036 036_ValidSudoku.cpp)
add_executable(${BUILD_036} ${SOURCE_FILES_036})


set(BUILD_039 main039)
set(SOURCE_FILES_039 039_CombinationSum.cpp)
add_executable(${BUILD_039} ${SOURCE_FILES_039})


set(BUILD_040 main040)
set(SOURCE_FILES_040 040_CombiationSumII.cpp)
add_executable(${BUILD_040} ${SOURCE_FILES_040})


set(BUILD_041 main041)
set(SOURCE_FILES_041 041_FirstMissingPositive.cpp)
add_executable(${BUILD_041} ${SOURCE_FILES_041})


set(BUILD_042 main042)
set(SOURCE_FILES_042 042_TrappingRainWater.cpp)
add_executable(${BUILD_042} ${SOURCE_FILES_042})


set(BUILD_043 main043)
set(SOURCE_FILES_043 043_MultiplyStrings.cpp)
add_executable(${BUILD_043} ${SOURCE_FILES_043})


set(BUILD_044 main044)
set(SOURCE_FILES_044 044_WildcardMatching.c++)
add_executable(${BUILD_044} ${SOURCE_FILES_044})


set(BUILD_044 main044_1)
set(SOURCE_FILES_044 044_WildcardMatching.cpp)
add_executable(${BUILD_044} ${SOURCE_FILES_044})


set(BUILD_045 main045)
set(SOURCE_FILES_045 045_JumpGameII.cpp)
add_executable(${BUILD_045} ${SOURCE_FILES_045})


set(BUILD_046 main046)
set(SOURCE_FILES_046 046_Permutations.cpp)
add_executable(${BUILD_046} ${SOURCE_FILES_046})


set(BUILD_047 main047)
set(SOURCE_FILES_047 047_PermutationII.cpp)
add_executable(${BUILD_047} ${SOURCE_FILES_047})


set(BUILD_048 main048)
set(SOURCE_FILES_048 048_RotateImage.cpp)
add_executable(${BUILD_048} ${SOURCE_FILES_048})


set(BUILD_049 main049)
set(SOURCE_FILES_049 049_GroupAnagrams.cpp)
add_executable(${BUILD_049} ${SOURCE_FILES_049})


set(BUILD_050 main050)
set(SOURCE_FILES_050 050_Pow.cpp)
add_executable(${BUILD_050} ${SOURCE_FILES_050})


set(BUILD_051 main051)
set(SOURCE_FILES_051 051_N_Queens.cpp)
add_executable(${BUILD_051} ${SOURCE_FILES_051})


set(BUILD_052 main052)
set(SOURCE_FILES_052 052_N-QueensII.cpp)
add_executable(${BUILD_052} ${SOURCE_FILES_052})


set(BUILD_054 main054)
set(SOURCE_FILES_054 054_SprialMatrix.cpp)
add_executable(${BUILD_054} ${SOURCE_FILES_054})


set(BUILD_055 main055)
set(SOURCE_FILES_055 055_JumpGame.cpp)
add_executable(${BUILD_055} ${SOURCE_FILES_055})


set(BUILD_056 main056)
set(SOURCE_FILES_056 056_MergeIntervals.cpp)
add_executable(${BUILD_056} ${SOURCE_FILES_056})


set(BUILD_057 main057)
set(SOURCE_FILES_057 057_InsertInterval.cpp)
add_executable(${BUILD_057} ${SOURCE_FILES_057})


set(BUILD_058 main058)
set(SOURCE_FILES_058 058_LengthofLastWord.cpp)
add_executable(${BUILD_058} ${SOURCE_FILES_058})


set(BUILD_059 main059)
set(SOURCE_FILES_059 059_SpiralMatrixII.cpp)
add_executable(${BUILD_059} ${SOURCE_FILES_059})


set(BUILD_060 main060)
set(SOURCE_FILES_060 060_PermutationSequence.cpp)
add_executable(${BUILD_060} ${SOURCE_FILES_060})


set(BUILD_061 main061)
set(SOURCE_FILES_061 "061_Rotate List.cpp")
add_executable(${BUILD_061} ${SOURCE_FILES_061})


set(BUILD_061 main061_1)
set(SOURCE_FILES_061 061_RotateList.cpp)
add_executable(${BUILD_061} ${SOURCE_FILES_061})


set(BUILD_062 main062)
set(SOURCE_FILES_062 062_UniquePaths.cpp)
add_executable(${BUILD_062} ${SOURCE_FILES_062})


set(BUILD_063 main063)
set(SOURCE_FILES_063 063_UniquePathII.cpp)
add_executable(${BUILD_063} ${SOURCE_FILES_063})


set(BUILD_064 main064)
set(SOURCE_FILES_064 064_MinimumPathSum.cpp)
add_executable(${BUILD_064} ${SOURCE_FILES_064})


set(BUILD_065 main065)
set(SOURCE_FILES_065 065_ValidNumber.cpp)
add_executable(${BUILD_065} ${SOURCE_FILES_065})


set(BUILD_066 main066)
set(SOURCE_FILES_066 066_PlusOne.cpp)
add_executable(${BUILD_066} ${SOURCE_FILES_066})


set(BUILD_067 main067)
set(SOURCE_FILES_067 067_AddBinary.cpp)
add_executable(${BUILD_067} ${SOURCE_FILES_067})


set(BUILD_068 main068)
set(SOURCE_FILES_068 068_TextJustification.cpp)
add_executable(${BUILD_068} ${SOURCE_FILES_068})


set(BUILD_069 main069)
set(SOURCE_FILES_069 "069_Sqrt(x).cpp")
add_executable(${BUILD_069} ${SOURCE_FILES_069})


set(BUILD_070 main070)
set(SOURCE_FILES_070 070_ClimbingStairs.c++)
add_executable(${BUILD_070} ${SOURCE_FILES_070})


set(BUILD_071 main071)
set(SOURCE_FILES_071 071_SimplifyPath.c++)
add_executable(${BUILD_071} ${SOURCE_FILES_071})


set(BUILD_072 main072)
set(SOURCE_FILES_072 072_EditDistance.c++)
add_executable(${BUILD_072} ${SOURCE_FILES_072})


set(BUILD_073 main073)
set(SOURCE_FILES_073 073_SetMatrixZeroes.c++)
add_executable(${BUILD_073} ${SOURCE_FILES_073})


set(BUILD_074 main074)
set(SOURCE_FILES_074 074_Searcha2DMatrix.c++)
add_executable(${BUILD_074} ${SOURCE_FILES_074})


set(BUILD_075 main075)
set(SOURCE_FILES_075 075_SortColors.c++)
add_executable(${BUILD_075} ${SOURCE_FILES_075})


set(BUILD_076 main076)
set(SOURCE_FILES_076 076_MinimumWindowSubstring.c++)
add_executable(${BUILD_076} ${SOURCE_FILES_076})


set(BUILD_077 main077)
set(SOURCE_FILES_077 077_Combinations.c++)
add_executable(${BUILD_077} ${SOURCE_FILES_077})


set(BUILD_078 main078)
set(SOURCE_FILES_078 078_Subsets.c++)
add_executable(${BUILD_078} ${SOURCE_FILES_078})


set(BUILD_079 main079)
set(SOURCE_FILES_079 079_WordSearch.c++)
add_executable(${BUILD_079} ${SOURCE_FILES_079})


set(BUILD_080 main080)
set(SOURCE_FILES_080 080_RemoveDuplicatesfromSortedArray.c++)
add_executable(${BUILD_080} ${SOURCE_FILES_080})


set(BUILD_081 main081)
set(SOURCE_FILES_081 081_SearchinRotatedSortedArrayII.c++)
add_executable(${BUILD_081} ${SOURCE_FILES_081})


set(BUILD_082 main082)
set(SOURCE_FILES_082 082_RemoveDuplicatesfromSortedListII.c++)
add_executable(${BUILD_082} ${SOURCE_FILES_082})


set(BUILD_083 main083)
set(SOURCE_FILES_083 083_RemoveDuplicatesfromSortedList.c++)
add_executable(${BUILD_083} ${SOURCE_FILES_083})


set(BUILD_084 main084)
set(SOURCE_FILES_084 084_LargestRectangleinHistogram.c++)
add_executable(${BUILD_084} ${SOURCE_FILES_084})


set(BUILD_085 main085)
set(SOURCE_FILES_085 085_MaximalRectangle.c++)
add_executable(${BUILD_085} ${SOURCE_FILES_085})


set(BUILD_086 main086)
set(SOURCE_FILES_086 086_PartitionList.c++)
add_executable(${BUILD_086} ${SOURCE_FILES_086})


set(BUILD_087 main087)
set(SOURCE_FILES_087 087_ScrambleString.c++)
add_executable(${BUILD_087} ${SOURCE_FILES_087})


set(BUILD_088 main088)
set(SOURCE_FILES_088 088_MergeSortedArray.c++)
add_executable(${BUILD_088} ${SOURCE_FILES_088})


set(BUILD_089 main089)
set(SOURCE_FILES_089 089_GrayCode.c++)
add_executable(${BUILD_089} ${SOURCE_FILES_089})


set(BUILD_090 main090)
set(SOURCE_FILES_090 090_SubsetsII.c++)
add_executable(${BUILD_090} ${SOURCE_FILES_090})


set(BUILD_091 main091)
set(SOURCE_FILES_091 091_DecodeWays.c++)
add_executable(${BUILD_091} ${SOURCE_FILES_091})


set(BUILD_092 main092)
set(SOURCE_FILES_092 092_ReverseLinkedListII.c++)
add_executable(${BUILD_092} ${SOURCE_FILES_092})


set(BUILD_093 main093)
set(SOURCE_FILES_093 093_RestoreIPAddresses.c++)
add_executable(${BUILD_093} ${SOURCE_FILES_093})


set(BUILD_094 main094)
set(SOURCE_FILES_094 094_BinaryTreeInorderTraversal.c++)
add_executable(${BUILD_094} ${SOURCE_FILES_094})


set(BUILD_094 main094_1)
set(SOURCE_FILES_094 094_BinaryTreeInorderTraversal_v2.c++)
add_executable(${BUILD_094} ${SOURCE_FILES_094})


set(BUILD_095 main095)
set(SOURCE_FILES_095 095_UniqueBinarySearchTreesII.c++)
add_executable(${BUILD_095} ${SOURCE_FILES_095})


set(BUILD_096 main096)
set(SOURCE_FILES_096 096_UniqueBinarySearchTress.c++)
add_executable(${BUILD_096} ${SOURCE_FILES_096})


set(BUILD_097 main097)
set(SOURCE_FILES_097 097_InterleavingString.c++)
add_executable(${BUILD_097} ${SOURCE_FILES_097})


set(BUILD_098 main098)
set(SOURCE_FILES_098 098_ValidateBinarySearchTree.c++)
add_executable(${BUILD_098} ${SOURCE_FILES_098})


set(BUILD_099 main099)
set(SOURCE_FILES_099 099_RecoverBinarySearchTree.c++)
add_executable(${BUILD_099} ${SOURCE_FILES_099})


set(BUILD_100 main100)
set(SOURCE_FILES_100 100_SamTree.c++)
add_executable(${BUILD_100} ${SOURCE_FILES_100})


set(BUILD_101 main101)
set(SOURCE_FILES_101 101_SymmetricTree.c++)
add_executable(${BUILD_101} ${SOURCE_FILES_101})


set(BUILD_102 main102)
set(SOURCE_FILES_102 102_BinaryTreeLevelOrderTraversal.c++)
add_executable(${BUILD_102} ${SOURCE_FILES_102})


set(BUILD_103 main103)
set(SOURCE_FILES_103 103_BinaryTreeZigzagLevelOrderTraversal.c++)
add_executable(${BUILD_103} ${SOURCE_FILES_103})


set(BUILD_104 main104)
set(SOURCE_FILES_104 104_MaximumDepthofBinaryTree.c++)
add_executable(${BUILD_104} ${SOURCE_FILES_104})


set(BUILD_106 main106)
set(SOURCE_FILES_106 106_ConstructBinaryTreefromInorderandPostorderTraversal.c++)
add_executable(${BUILD_106} ${SOURCE_FILES_106})


set(BUILD_107 main107)
set(SOURCE_FILES_107 107_BinaryTreeLevelOrderTraversalII.c++)
add_executable(${BUILD_107} ${SOURCE_FILES_107})


set(BUILD_108 main108)
set(SOURCE_FILES_108 108_ConvertSortedArrayToBinarySearchTree.c++)
add_executable(${BUILD_108} ${SOURCE_FILES_108})


set(BUILD_109 main109)
set(SOURCE_FILES_109 109_ConvertSortedListToBinarySearchTree.c++)
add_executable(${BUILD_109} ${SOURCE_FILES_109})


set(BUILD_110 main110)
set(SOURCE_FILES_110 110_BalancedBinaryTree.c++)
add_executable(${BUILD_110} ${SOURCE_FILES_110})


set(BUILD_111 main111)
set(SOURCE_FILES_111 111_MinimumDepthOfBinaryTree.c++)
add_executable(${BUILD_111} ${SOURCE_FILES_111})


set(BUILD_112 main112)
set(SOURCE_FILES_112 112_PathSum.c++)
add_executable(${BUILD_112} ${SOURCE_FILES_112})


set(BUILD_113 main113)
set(SOURCE_FILES_113 113_PathSum2.c++)
add_executable(${BUILD_113} ${SOURCE_FILES_113})


set(BUILD_113 main113_1)
set(SOURCE_FILES_113 113_PathSumII.cpp)
add_executable(${BUILD_113} ${SOURCE_FILES_113})


set(BUILD_114 main114)
set(SOURCE_FILES_114 114_FlattenBinaryTreeToLinkedList.cpp)
add_executable(${BUILD_114} ${SOURCE_FILES_114})


set(BUILD_115 main115)
set(SOURCE_FILES_115 115_DistinctSubsequences.cpp)
add_executable(${BUILD_115} ${SOURCE_FILES_115})


set(BUILD_116 main116)
set(SOURCE_FILES_116 116_PopulatingNextRightPointersInEachNode.cpp)
add_executable(${BUILD_116} ${SOURCE_FILES_116})


set(BUILD_117 main117)
set(SOURCE_FILES_117 117_PopulatingNextRightPointersInEachNodeII.cpp)
add_executable(${BUILD_117} ${SOURCE_FILES_117})


set(BUILD_118 main118)
set(SOURCE_FILES_118 118_Pascal'sTriangle.cpp)
add_executable(${BUILD_118} ${SOURCE_FILES_118})


set(BUILD_119 main119)
set(SOURCE_FILES_119 119_Pascal'sTriangleII.cpp)
add_executable(${BUILD_119} ${SOURCE_FILES_119})


set(BUILD_120 main120)
set(SOURCE_FILES_120 120_Triangle.cpp)
add_executable(${BUILD_120} ${SOURCE_FILES_120})

set(BUILD_121 main121)
set(SOURCE_FILES_121 121_BestTimeBuySellStock.cpp)
add_executable(${BUILD_121} ${SOURCE_FILES_121})

set(BUILD_122 main122)
set(SOURCE_FILES_122 122_BestTimeBuySellStockII.cpp)
add_executable(${BUILD_122} ${SOURCE_FILES_122})

set(BUILD_123 main123)
set(SOURCE_FILES_123 123_BestTimeBuySellStockIII.cpp)
add_executable(${BUILD_123} ${SOURCE_FILES_123})


set(BUILD_144 main144)
set(SOURCE_FILES_144 144_BinaryTreePreorderTraversal.cpp)
add_executable(${BUILD_144} ${SOURCE_FILES_144})



set(BUILD_227 main227)
set(SOURCE_FILES_227 227_BasicCalculatorII.c++)
add_executable(${BUILD_227} ${SOURCE_FILES_227})







